# text_ori_cls

./: .gitignore  README.md  classifier.py  config.py  engine.py  model_convert.sh  pyproject.toml  requirments.txt  test.py  utils.py
models/: config.json
